[project]
name = "flux-state-validator"
version = "0.1.0"
description = "Production validator for FluxNode state consistency via ZMQ events"
readme = "README.md"
authors = [
    { name = "David White", email = "david@runonflux.io" }
]
requires-python = ">=3.13"
dependencies = [
    "pyzmq>=27.1.0",
    "aiohttp>=3.13.3",
    "typer>=0.22.0",
]

[project.scripts]
flux-state-validator = "flux_state_validator.cli:main"

[build-system]
requires = ["uv_build>=0.10.0,<0.11.0"]
build-backend = "uv_build"
